--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="header-wrapper">
 
-            <a href="./new-post.html" class="header-logo">
+            <a href="./index.html" class="header-logo">
                 <img class="header-logo-image" src="./img/logo.svg" alt="logo: Pikadu">
             </a>
 
