--- a/new-post.html
+++ b/new-post.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="header-wrapper">
 
-            <a href="/index.html" class="header-logo">
+            <a href="Pikadu/index.html" class="header-logo">
                 <img class="header-logo-image" src="./img/logo.svg" alt="logo: Pikadu">
             </a>
 
